Finally fixed image border problem by setting overflow to visible on main-content div.

--- a/source/stylesheets/screen.css.sass
+++ b/source/stylesheets/screen.css.sass
@@ -86,15 +86,15 @@ hr
 // Main layout styling
 
 .container
+  
+  #main-content
+    overflow: visible
+  
   // Force images to scale down to their container widths.
   img
     max-width: 100%
     height: auto
-    margin-bottom: 10px
-  
-  img
-    margin: 5px 0 0 6px
-    max-width: 97%
+    margin-top: 30px
     @include box-shadow(gray 0 0 10px)
     @include border-radius
 
